--- a/Cursach/Cursach.csproj
+++ b/Cursach/Cursach.csproj
@@ -80,6 +80,12 @@
     <Compile Include="FormDogovor.Designer.cs">
       <DependentUpon>FormDogovor.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormHotel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormHotel.Designer.cs">
+      <DependentUpon>FormHotel.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormRegistration.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +96,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadFile.cs" />
+    <Compile Include="Tour.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -101,6 +108,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormDogovor.resx">
       <DependentUpon>FormDogovor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormHotel.resx">
+      <DependentUpon>FormHotel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormRegistration.resx">
       <DependentUpon>FormRegistration.cs</DependentUpon>
