--- a/Cursach/Cursach.csproj
+++ b/Cursach/Cursach.csproj
@@ -74,6 +74,18 @@
     <Compile Include="FormAuthorization.Designer.cs">
       <DependentUpon>FormAuthorization.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormChoiceTour.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormChoiceTour.Designer.cs">
+      <DependentUpon>FormChoiceTour.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormDescription.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDescription.Designer.cs">
+      <DependentUpon>FormDescription.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormDogovor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -106,6 +118,12 @@
     <EmbeddedResource Include="FormAuthorization.resx">
       <DependentUpon>FormAuthorization.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormChoiceTour.resx">
+      <DependentUpon>FormChoiceTour.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormDescription.resx">
+      <DependentUpon>FormDescription.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormDogovor.resx">
       <DependentUpon>FormDogovor.cs</DependentUpon>
     </EmbeddedResource>
@@ -123,6 +141,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -136,6 +155,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Backgrounds_Blue_background_with_circles_035663_.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
