--- a/Cursach/Cursach.csproj
+++ b/Cursach/Cursach.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BD.cs" />
+    <Compile Include="Documents.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
