--- a/Cursach/Cursach.csproj
+++ b/Cursach/Cursach.csproj
@@ -46,6 +46,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>dll\itextsharp.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SQLite">
@@ -63,6 +66,7 @@
   <ItemGroup>
     <Compile Include="BD.cs" />
     <Compile Include="Documents.cs" />
+    <Compile Include="ExcelDiagram.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
