--- a/Cursach/Cursach.csproj
+++ b/Cursach/Cursach.csproj
@@ -190,6 +190,9 @@
   <ItemGroup>
     <None Include="Resources\Backgrounds_Blue_background_with_circles_035663_.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
